<resources>
    <string name="driving_mode_answer">Answer</string>
    <string name="driving_mode_reject">Reject</string>
    <string name="config_multiwindow_style">isolatedSplit</string>
    <string name="ddmmyy">dd/MM/yyyy</string>
    <string name="mmddyy">MM/dd/yyyy</string>
    <string name="yymmdd">yyyy/MM/dd</string>
    <string name="day_postfix" />
    <string name="year_postfix" />
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency dialler</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="inCallLabel">InCallUI</string>
    <string name="unknown">Unknown</string>
    <string name="anonymous">anonymous</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Unable to reach server</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect user name or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control</string>
    <string name="callFailed_cdma_notEmergency">Emergency calls only</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Earphone</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="audio_mode_speaker_tts">Answer via speaker</string>
    <string name="audio_mode_wired_headset_tts">Answer via earphones</string>
    <string name="audio_mode_bluetooth_tts">Answer via Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="voicemail">Voicemail</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string name="list_language_dtitle">Languages</string>
    <string name="enable_disable_local_weather">Local weather</string>
    <string name="local_weather_enable">Local weather enabled</string>
    <string name="local_weather_disable">Local weather disabled</string>
    <string name="enable_disable_atr">Area traffic reports</string>
    <string name="atr_enable">Area traffic reports enabled</string>
    <string name="atr_disable">Area traffic reports disabled</string>
    <string name="enable_disable_lafs">Local airport flight schedules</string>
    <string name="lafs_enable">Local airport flight schedules enabled</string>
    <string name="lafs_disable">Local airport flight schedules disabled</string>
    <string name="enable_disable_restaurants">Restaurants</string>
    <string name="restaurants_enable">Restaurants enabled</string>
    <string name="restaurants_disable">Restaurants disabled</string>
    <string name="enable_disable_lodgings">Lodgings</string>
    <string name="lodgings_enable">Lodgings enabled</string>
    <string name="lodgings_disable">Lodgings disabled</string>
    <string name="enable_disable_retail_directory">Retail directory</string>
    <string name="retail_directory_enable">Retail directory enabled</string>
    <string name="retail_directory_disable">Retail directory disabled</string>
    <string name="enable_disable_advertisements">Advertisements</string>
    <string name="advertisements_enable">Advertisements enabled</string>
    <string name="advertisements_disable">Advertisements disabled</string>
    <string name="enable_disable_stock_quotes">Stock quotes</string>
    <string name="stock_quotes_enable">Stock quotes enabled</string>
    <string name="stock_quotes_disable">Stock quotes disabled</string>
    <string name="enable_disable_eo">Employment opportunities</string>
    <string name="eo_enable">Employment opportunities enabled</string>
    <string name="eo_disable">Employment opportunities disabled</string>
    <string name="enable_disable_mhh">Medical and health mode</string>
    <string name="mhh_enable">Medical and health mode activated</string>
    <string name="mhh_disable">Medical and health mode deactivated</string>
    <string name="enable_disable_technology_news">Technology news</string>
    <string name="technology_news_enable">Technology news enabled</string>
    <string name="technology_news_disable">Technology news disabled</string>
    <string name="enable_disable_multi_category">Multi-category</string>
    <string name="multi_category_enable">Multi-category enabled</string>
    <string name="multi_category_disable">Multi-category disabled</string>
    <string name="lte_gsm_wcdma_automode">LTE/GSM/WCDMA (auto connect)</string>
    <string name="gsm_wcdma_automode">GSM/WCDMA (auto connect)</string>
    <string name="lte_wcdma_automode">LTE/WCDMA (auto connect)</string>
    <string name="lte_wcdma_gsm_automode">"LTE/WCDMA/GSM
(auto connect)"</string>
    <string name="wcdma_gsm_automode">"WCDMA/GSM
(auto connect)"</string>
    <string name="gsm_only">GSM only</string>
    <string name="wcdma_only">WCDMA only</string>
    <string name="gsm_tdscdma_tdlte_automode">GSM/TD-SCDMA/TD-LTE (auto connect)</string>
    <string name="gsm_tdscdma_automode">GSM/TD-SCDMA (Auto mode)</string>
    <string name="tdscdma_only">TD-SCDMA only</string>
    <string name="tdlte_only">TD-LTE only</string>
    <string name="lte_only">LTE only</string>
    <string name="gsm_hspa_lte_autoconnect">GSM/HSPA/LTE (auto connect)</string>
    <string name="gsm_hspa_autoconnect">GSM/HSPA (auto connect)</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenUnholdText">Unhold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Keypad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="description_image_button_one">One</string>
    <string name="description_image_button_two">Two</string>
    <string name="description_image_button_three">Three</string>
    <string name="description_image_button_four">Four</string>
    <string name="description_image_button_five">Five</string>
    <string name="description_image_button_six">Six</string>
    <string name="description_image_button_seven">Seven</string>
    <string name="description_image_button_eight">Eight</string>
    <string name="description_image_button_nine">Nine</string>
    <string name="description_image_button_star">Star</string>
    <string name="description_image_button_zero">Zero</string>
    <string name="description_image_button_pound">Pound</string>
    <string name="messages">Messages</string>
    <string name="manage_conference_call">Manage conference call</string>
    <string name="contacts">Contacts</string>
    <string name="memo">Memo</string>
    <string name="noise_reduction_off">Noise reduction disabled</string>
    <string name="noise_reduction_on">Noise reduction enabled</string>
    <string name="mute_off">Mute off</string>
    <string name="mute_on">Mute on</string>
    <string name="remote_control">Remote control</string>
    <string name="onehand_mode_on">One-handed operation on</string>
    <string name="onehand_mode_off">One-handed operation off</string>
    <string name="add_call_opt">Add call</string>
    <string name="send_file_via_chat_on">Share file via Chat on</string>
    <string name="send_file_via_filetransfer">Share file via File transfer</string>
    <string name="sim_services">SIM services</string>
    <string name="uim_services">UIM card services</string>
    <string name="transfer">Transfer</string>
    <string name="extra_vol_button">Extra volume</string>
    <string name="popup_start_record">Record Voice</string>
    <string name="popup_stop_record">Stop recording</string>
    <string name="capture">Capture image</string>
    <string name="rec_video">Record video</string>
    <string name="switch_cam">Switch camera</string>
    <string name="dual_cam_enable">Enable dual camera</string>
    <string name="dual_cam_disable">Disable dual camera</string>
    <string name="out_img">Outgoing image</string>
    <string name="acrodea_avatar">Acrodea avatar</string>
    <string name="hide">Hide me</string>
    <string name="bright">Brightness</string>
    <string name="keypad">Keypad</string>
    <string name="switch_hd">Switch to headset</string>
    <string name="switch_ph">Switch to phone</string>
    <string name="spkoff">Speaker off</string>
    <string name="show_resize_screen">View in original size</string>
    <string name="show_full_screen">View in full screen</string>
    <string name="spkon">Speaker on</string>
    <string name="show">Show me</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="eye_contact_on">Enable eye contact</string>
    <string name="eye_contact_off">Disable eye contact</string>
    <string name="emotional_animation">Animated emotions</string>
    <string name="theme_view">Theme view</string>
    <string name="cartoon_view_on">Enable cartoon view</string>
    <string name="cartoon_view_off">Disable cartoon view</string>
    <string name="contrast">Contrast</string>
    <string name="screen_brightness">Screen brightness</string>
    <string name="close_camera">Close camera</string>
    <string name="open_camera">Open camera</string>
    <string name="callsettings_noise_reduction_title">Noise reduction</string>
    <string name="onscreenBluetoothTextOn">Switch to phone</string>
    <string name="onscreenBluetoothTextOff">Switch to headset</string>
    <string name="button_decline">Settings</string>
    <string name="adduser">Invite new participant</string>
    <string name="mediashare">Media Sharing</string>
    <string name="switch_to_voice_call">Switch to voice call</string>
    <string name="personalize_call_sound">Personalise call sound</string>
    <string name="group_voice_call">Group call</string>
    <string name="image_effect">Image effect</string>
</resources>