<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/extraButtonRow" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/extra_button_row" />
    <ImageButton android:id="@id/endButton" android:background="@drawable/end_call_background" android:layout_width="fill_parent" android:src="@drawable/ic_in_call_phone_hangup" android:contentDescription="@string/onscreenEndCallText" style="@style/InCallEndButton" />
    <LinearLayout android:orientation="horizontal" android:background="@color/button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/button_cluster_side_padding" android:paddingEnd="@dimen/button_cluster_side_padding">
        <View style="@style/VerticalSeparator" />
        <ToggleButton android:id="@id/dialpadButton" android:background="@drawable/btn_compound_dialpad" android:contentDescription="@string/onscreenShowDialpadText" style="@style/InCallCompoundButton" />
        <View style="@style/VerticalSeparator" />
        <ImageButton android:id="@id/audioButton" android:background="@drawable/btn_compound_audio" android:contentDescription="@string/onscreenAudioText" style="@style/InCallButton" />
        <View style="@style/VerticalSeparator" />
        <ImageButton android:id="@id/muteButton" android:background="@drawable/btn_fake_compound_mute" android:contentDescription="@string/onscreenMuteText" style="@style/InCallButton" />
        <View style="@style/VerticalSeparator" />
        <ImageButton android:id="@id/holdButton" android:background="@drawable/btn_fake_compound_hold" android:contentDescription="@string/onscreenHoldText" style="@style/InCallButton" />
        <ImageButton android:id="@id/swapButton" android:visibility="gone" android:src="@drawable/ic_incall_switch_holo_dark" android:contentDescription="@string/onscreenSwapCallsText" style="@style/InCallButton" />
        <View android:id="@id/holdSwapSpacer" style="@style/VerticalSeparator" />
        <ImageButton android:id="@id/addButton" android:visibility="gone" android:src="@drawable/ic_add_contact_holo_dark" android:contentDescription="@string/onscreenAddCallText" style="@style/InCallButton" />
        <ImageButton android:id="@id/mergeButton" android:visibility="gone" android:src="@drawable/ic_merge_holo_dark" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
        <ImageButton android:id="@id/rcsVideoButton" android:visibility="gone" android:src="@drawable/ic_merge_holo_dark" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
        <ImageButton android:id="@id/rcsShareButton" android:visibility="gone" android:src="@drawable/ic_merge_holo_dark" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
        <View style="@style/VerticalSeparator" />
    </LinearLayout>
</LinearLayout>